# Projeto_garagem_2025

./: README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
core/: admin.py
core/migrations/: 0001_initial.py  0002_modelo.py  0003_cor.py  0004_veiculo.py  0005_remove_veiculo_acessorio_veiculo_acessorio.py
core/models/: __init__.py  acessorio.py  cor.py  modelo.py  veiculo.py
core/serializers/: __init__.py
core/views/: __init__.py
garagem/: admin.py
garagem/migrations/: 0001_initial.py  0002_remove_veiculo_acessorio_veiculo_acessorio.py
garagem/models/: __init__.py
garagem/serializers/: modelo.py  veiculo.py
