[project]
name = "Projeto_garagem_2025"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gabz047", email = "gabe1612mail@gmail.com"},
]
dependencies = ["django>=5.2", "djangorestframework>=3.16.0", "pygraphviz>=1.14", "django-extensions>=4.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
